--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Opensuse h4ckweek YYYY
+title: Opensuse h4ckweek 23
 logo: /assets/img/hackweek_logo.png
-description: Opensuse h4ckweek YYYY navigation log
+description: Opensuse h4ckweek 23 navigation log
 theme: jekyll-theme-minimal
 future: true
